<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_alas"
    tools:context=".ui.views.GoodsDetailActivity">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guide_middle_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_info_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tv_tag_nombre"
                        style="@style/TextSubtitleCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tag_nombre" />

                    <TextView
                        android:id="@+id/tv_nombre_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Víctor Hugo Pólito Seba" />

                    <TextView
                        android:id="@+id/tv_tag_rfc"
                        style="@style/TextSubtitleCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/str_tag_rfc" />

                    <TextView
                        android:id="@+id/tv_rfc_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="POSV971220HVZLBC01" />

                    <TextView
                        android:id="@+id/tv_tag_address"
                        style="@style/TextSubtitleCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/str_tag_domicilio" />

                    <TextView
                        android:id="@+id/tv_address_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Placio Nacional, Moneda #13" />

                    <TextView
                        android:id="@+id/tv_tag_floor"
                        style="@style/TextSubtitleCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/str_tag_piso" />

                    <TextView
                        android:id="@+id/tv_floor_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Piso 1" />

                    <TextView
                        android:id="@+id/tv_tag_puesto"
                        style="@style/TextSubtitleCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/str_tag_puesto" />

                    <TextView
                        android:id="@+id/tv_ext_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Jefatura de departamento" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <!--
            <androidx.cardview.widget.CardView
                android:id="@+id/card_info_goods"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="@id/guide_middle_detail">
                <LinearLayout
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_tag_inventario"
                        style="@style/TextSubtitleCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tag_num_de_inventario" />

                    <TextView
                        android:id="@+id/tv_inventario_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="12233423342323" />

                    <TextView
                        android:layout_marginTop="16dp"
                        android:id="@+id/tv_tag_serie"
                        android:layout_width="match_parent"
                        style="@style/TextSubtitleCard"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tag_serie" />
                    <TextView
                        style="@style/TextBodyCard"
                        android:id="@+id/tv_serie_detail"
                        android:layout_width="match_parent"
                        android:text="1223345132412341"
                        android:layout_height="wrap_content" />

                    <TextView
                        style="@style/TextSubtitleCard"
                        android:id="@+id/tv_tag_marca"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/str_tag_marca" />

                    <TextView
                        android:id="@+id/tv_marca_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Lenovo" />

                    <TextView
                        android:layout_marginTop="16dp"
                        android:id="@+id/tv_tag_model"
                        android:layout_width="match_parent"
                        style="@style/TextSubtitleCard"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tag_modelo" />
                    <TextView
                        style="@style/TextBodyCard"
                        android:id="@+id/tv_model_detail"
                        android:layout_width="match_parent"
                        android:text="Lattitude 1234"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_marginTop="16dp"
                        android:id="@+id/tv_tag_mac_address"
                        android:layout_width="match_parent"
                        style="@style/TextSubtitleCard"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tag_mac_address" />

                    <TextView
                        android:id="@+id/tv_mac_address_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="12:34:f5:5f:4r" />

                    <TextView
                        android:layout_marginTop="16dp"
                        android:id="@+id/tv_tag_description"
                        android:layout_width="match_parent"
                        style="@style/TextSubtitleCard"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tag_descripcion" />

                    <TextView
                        android:lines="5"
                        android:id="@+id/tv_description_detail"
                        style="@style/TextBodyCard"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Descripción del bien " />


                </LinearLayout>
            </androidx.cardview.widget.CardView>
-->
        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_middle_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <com.github.islamkhsh.CardSliderViewPager
        app:layout_constraintTop_toBottomOf="@+id/guide_middle_detail"
        android:id="@+id/card_slider_vp"
        android:layout_width="match_parent"
        android:layout_marginTop="8dp"
        android:layout_height="0dp"
        app:cardSlider_indicator="@id/indicator"
        app:cardSlider_otherPagesWidth="24dp"
        app:cardSlider_pageMargin="12dp"
        app:cardSlider_smallAlphaFactor="0.5"
        app:cardSlider_smallScaleFactor="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="10dp"/>

    <com.github.islamkhsh.CardSliderIndicator
        android:id="@+id/indicator"
        app:layout_constraintTop_toBottomOf="@+id/card_slider_vp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:selectedIndicator="@drawable/selected_dot_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />


</androidx.constraintlayout.widget.ConstraintLayout>